--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -13,8 +13,6 @@
     </style>
 </head>
 
-<body>
-
     <body class="center" style="padding: 50px">
         <div class="tui-window" style="text-align: left;">
             <fieldset class="tui-fieldset">
@@ -26,79 +24,78 @@
                             <th>INDEX</th>
                             <th>TYPE</th>
                             <th>CATEGORY</th>
+                            <th>DATA</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <a href="#!">
-                                <div>
-                                    <td>Sun</td>
-                                </div>
-                            </a>
+                            <td>Sun</td>
                             <td>#2</td>
                             <td>STAR</td>
                             <td>S-04</td>
+                            <td>84.1 Mb</td>
                         </tr>
                         <tr>
-                            <a href="#!">
-                                <div>
-                                    <td>Earth</td>
-                                </div>
-                            </a>
+                            <td>Earth</td>
                             <td>#61</td>
                             <td>Planet</td>
                             <td>PC-01</td>
+                            <td>84.1 Mb</td>
                         </tr>
                         <tr>
-                            <a href="#!">
-                                <div>
-                                    <td>Pluto</td>
-                                </div>
-                            </a>
+                            <td>Pluto</td>
                             <td>#61</td>
                             <td>Dwarf</td>
                             <td>D-05</td>
+                            <td>84.1 Mb</td>
                         </tr>
                         <tr>
                             <td>svchost.exe</td>
                             <td>580</td>
                             <td>01</td>
+                            <td>D-05</td>
                             <td>9.440 Kb</td>
                         </tr>
                         <tr>
                             <td>explorer.exe</td>
                             <td>4</td>
                             <td>00</td>
+                            <td>D-05</td>
                             <td>53.740 Kb</td>
                         </tr>
                         <tr>
                             <td>conhost.exe</td>
                             <td>25768</td>
                             <td>00</td>
+                            <td>D-05</td>
                             <td>1.748 Kb</td>
                         </tr>
                         <tr>
                             <td>msdos.exe</td>
                             <td>748</td>
                             <td>00</td>
+                            <td>D-05</td>
                             <td>22.216 Kb</td>
                         </tr>
                         <tr>
                             <td>System</td>
                             <td>25000</td>
                             <td>12</td>
+                            <td>D-05</td>
                             <td>112 Kb</td>
                         </tr>
                         <tr>
                             <td>svchost.exe</td>
                             <td>580</td>
                             <td>01</td>
+                            <td>D-05</td>
                             <td>9.440 Kb</td>
                         </tr>
                         <tr>
                             <td>explorer.exe</td>
                             <td>4</td>
                             <td>00</td>
+                            <td>D-05</td>
                             <td>53.740 Kb</td>
                         </tr>
                     </tbody>
@@ -107,5 +104,4 @@
         </div><br>
     </div>
 </body>
-
 </html>
