--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="tui-bg-purple-black">
+<html lang="en" class="tui-bg-blue-black">
 
 <head>
     <meta charset="UTF-8">
@@ -24,7 +24,7 @@
                             <th>INDEX</th>
                             <th>TYPE</th>
                             <th>CATEGORY</th>
-                            <th>DATA</th>
+                            <th>SCANNED</th>
                         </tr>
                     </thead>
                     <tbody>
