--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -14,6 +14,29 @@
 </head>
 
     <body class="center" style="padding: 50px">
+
+        <div class="tui-window">
+            <fieldset class="tui-fieldset">
+                <legend>Starmap</legend>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+                Curabitur id vestibulum libero, id fermentum lorem.<br>
+                Aenean aliquam erat leo, eu tempus ex ornare eu.<br>
+                Sed ut lacus libero. Etiam rhoncus ipsum arcu.<br>
+                In quis bibendum libero. Donec nec egestas ipsum.<br>
+                Sed in venenatis diam. Nullam sollicitudin risus vel.<br>
+            </fieldset>
+        </div>
+
+        <div class="info-text">Simple panel</div>
+        <div class="tui-panel cyan-168 black-255-text">
+            <div class="tui-panel-content">
+                <b>NOTE:</b> This page is still under construction.<br> 
+                The starmap is currently un available<br> 
+                Please come back after we've collected more data.
+            </div>
+        </div>
+
+
         <div class="tui-window" style="text-align: left;">
             <fieldset class="tui-fieldset">
                 <legend class="center">PLANET INDEX</legend>
