--- a/testing.html
+++ b/testing.html
@@ -72,7 +72,7 @@
                 <span class="tui-statusbar-divider"></span>
 
                 <li class="tui-dropdown">
-                    <a href="#!"></a>
+                    <a href="/index.html"></a>
                     <span class="red-168-text">H</span>ome
                 </li>
 
