--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -85,15 +85,15 @@
                     </li>
                 </ul>
             </nav>
-    </div>
 
-        <div class="tui-panel cyan-168 black-255-text center">
+
+        <!-- <div class="tui-panel cyan-168 black-255-text center">
             <div class="tui-panel-content">
                 <b>NOTE:</b> This page is still under construction.<br> 
                 The starmap is currently un available<br> 
                 Please come back after we've collected more data.
             </div>
-        </div>
+        </div> -->
 
 
         <div class="tui-window" style="text-align: left;">
@@ -185,5 +185,6 @@
             </fieldset>
         </div><br>
     </div>
+</div>
 </body>
 </html>
