--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -12,6 +12,16 @@
         }
     </style>
 </head>
+
+    <div class="tui-panel cyan-168 black-255-text center">
+        <div class="tui-panel-content">
+            <b>NOTE:</b> This page is still under construction.<br> 
+            The starmap is currently un available<br> 
+            Please come back after we've collected more data.
+        </div>
+    </div>
+
+
     <div class="tui-screen-800-600 bordered centered tui-bg-blue-black">
         <body class="center" style="padding: 50px">
 
@@ -85,16 +95,6 @@
                     </li>
                 </ul>
             </nav>
-
-
-        <!-- <div class="tui-panel cyan-168 black-255-text center">
-            <div class="tui-panel-content">
-                <b>NOTE:</b> This page is still under construction.<br> 
-                The starmap is currently un available<br> 
-                Please come back after we've collected more data.
-            </div>
-        </div> -->
-
 
         <div class="tui-window" style="text-align: left;">
             <fieldset class="tui-fieldset">
