--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -23,7 +23,7 @@
 
 
     <div class="tui-screen-800-600 bordered centered tui-bg-blue-black">
-        <body class="center" style="padding: 50px">
+        <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
                 <span class="tui-datetime" data-format="h:m:s a"></span>
@@ -32,7 +32,7 @@
                     <span class="tui-statusbar-divider"></span>
 
                     <li class="tui-dropdown">
-                        <a href="/index.html"></a>
+                        <a href="index"></a>
                         <span class="red-168-text">H</span>ome
                     </li>
 
