--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -13,17 +13,27 @@
     </style>
 </head>
 
+    <div class="tui-panel cyan-168 black-255-text centered">
+        <div class="tui-panel-content">
+            <b>NOTE:</b> This page is still under construction.<br> 
+            The starmap is currently un available<br> 
+            Please come back after we've collected more data.
+        </div>
+    </div>
+
+    <div class="tui-window" style="text-align: left;">
+        <fieldset class="tui-fieldset">
+            <legend class="center">Under Construction</legend>
+            15% ............:
+            <div class="tui-progress-bar inline-block valign-middle">
+                <span class="tui-indeterminate"></span>
+            </div>
+        </fieldset>
+    </div>
+
 
     <div class="tui-screen-800-600 bordered centered tui-bg-blue-black">
         <body style="padding: 50px">
-
-            <div class="tui-panel cyan-168 black-255-text center">
-                <div class="tui-panel-content">
-                    <b>NOTE:</b> This page is still under construction.<br> 
-                    The starmap is currently un available<br> 
-                    Please come back after we've collected more data.
-                </div>
-            </div>
 
             <nav class="tui-nav absolute">
                 <span class="tui-datetime" data-format="h:m:s a"></span>
