--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -12,7 +12,7 @@
         }
     </style>
 </head>
-
+<body style="padding: 50px">
     <div class="tui-panel cyan-168 black-255-text centered">
         <div class="tui-panel-content">
             <b>NOTE:</b> This page is still under construction.<br> 
@@ -34,7 +34,6 @@
 
 
     <div class="tui-screen-800-600 bordered centered tui-bg-blue-black">
-        <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
                 <span class="tui-datetime" data-format="h:m:s a"></span>
@@ -43,7 +42,7 @@
                     <span class="tui-statusbar-divider"></span>
 
                     <li class="tui-dropdown">
-                        <a href="index"></a>
+                        <a href="/testing.html"></a>
                         <span class="red-168-text">H</span>ome
                     </li>
 
