--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -22,7 +22,7 @@
     </div>
 <br>
 <br>
-    <div class="tui-window centered" style="text-align: left;">
+    <!-- <div class="tui-window centered" style="text-align: left;">
         <fieldset class="tui-fieldset">
             <legend class="center">Under Construction</legend>
             15% ............:
@@ -30,7 +30,7 @@
                 <span class="tui-indeterminate"></span>
             </div>
         </fieldset>
-    </div>
+    </div> -->
 
 
     <div class="tui-screen-800-600 bordered centered tui-bg-blue-black">
