--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -12,7 +12,7 @@
         }
     </style>
 </head>
-<body style="padding: 50px">
+<body style="padding: 50px" class="centered">
     <div class="tui-panel cyan-168 black-255-text centered">
         <div class="tui-panel-content">
             <b>NOTE:</b> This page is still under construction.<br> 
