--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -12,7 +12,7 @@
         }
     </style>
 </head>
-<body style="padding: 50px" class="centered">
+
     <div class="tui-panel cyan-168 black-255-text centered">
         <div class="tui-panel-content">
             <b>NOTE:</b> This page is still under construction.<br> 
@@ -20,9 +20,9 @@
             Please come back after we've collected more data.
         </div>
     </div>
+<!-- <br>
 <br>
-<br>
-    <!-- <div class="tui-window centered" style="text-align: left;">
+    <div class="tui-window centered" style="text-align: left;">
         <fieldset class="tui-fieldset">
             <legend class="center">Under Construction</legend>
             15% ............:
@@ -34,6 +34,7 @@
 
 
     <div class="tui-screen-800-600 bordered centered tui-bg-blue-black">
+        <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
                 <span class="tui-datetime" data-format="h:m:s a"></span>
