--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -18,7 +18,7 @@
             The starmap is currently unavailable<br> 
             Please come back after we've collected more data.
         </div>
-    </bod7>
+    </body>
 <!-- <br>
 <br>
     <div class="tui-window centered" style="text-align: left;">
