--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -12,13 +12,14 @@
         }
     </style>
 </head>
-    <body class="tui-panel cyan-168 black-255-text centered">
+
+    <div class="tui-panel cyan-168 black-255-text">
         <div class="tui-panel-content">
             <b>NOTE:</b> This page is still under construction.<br> 
             The starmap is currently unavailable<br> 
             Please come back after we've collected more data.
         </div>
-    </body>
+    </div>
 <!-- <br>
 <br>
     <div class="tui-window centered" style="text-align: left;">
