--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 
-    <div class="tui-panel cyan-168 black-255-text">
+    <div class="tui-panel centered cyan-168 black-255-text">
         <div class="tui-panel-content">
             <b>NOTE:</b> This page is still under construction.<br> 
             The starmap is currently unavailable<br> 
