--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -13,25 +13,13 @@
     </style>
 </head>
 
-    <div class="tui-panel centered cyan-168 black-255-text">
+    <div class="tui-panel center cyan-168 black-255-text">
         <div class="tui-panel-content">
             <b>NOTE:</b> This page is still under construction.<br> 
             The starmap is currently unavailable<br> 
             Please come back after we've collected more data.
         </div>
     </div>
-<!-- <br>
-<br>
-    <div class="tui-window centered" style="text-align: left;">
-        <fieldset class="tui-fieldset">
-            <legend class="center">Under Construction</legend>
-            15% ............:
-            <div class="tui-progress-bar inline-block valign-middle">
-                <span class="tui-indeterminate"></span>
-            </div>
-        </fieldset>
-    </div> -->
-
 
     <div class="tui-screen-800-600 bordered centered tui-bg-blue-black">
         <body style="padding: 50px">
