--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -13,10 +13,10 @@
     </style>
 </head>
 
-    <div class="tui-panel center cyan-168 black-255-text">
+    <div class="tui-panel cyan-168 black-255-text centered">
         <div class="tui-panel-content">
             <b>NOTE:</b> This page is still under construction.<br> 
-            The starmap is currently unavailable<br> 
+            The starmap is currently un available<br> 
             Please come back after we've collected more data.
         </div>
     </div>
@@ -31,7 +31,7 @@
                     <span class="tui-statusbar-divider"></span>
 
                     <li class="tui-dropdown">
-                        <a href="/testing.html"></a>
+                        <a href="https://startrails.space/testing"></a>
                         <span class="red-168-text">H</span>ome
                     </li>
 
