--- a/CREDITS.html
+++ b/CREDITS.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="tui-bg-blue-black">
+<html lang="en" class="tui-bg-purple-black">
 
 <head>
     <meta charset="UTF-8">
@@ -18,150 +18,96 @@
         }
     </style>
 </head>
+    <div class="tui-screen-800-600 bordered centered tui-bg-blue-black">
+        <body style="padding: 50px">
 
-<body>
-    <div class="center" style="margin-top: 100px; margin-bottom: 100px">
-
-        <!-- Simple window -->
-        <div class="info-text">Simple window</div>
-        <div class="tui-window">
-            <fieldset class="tui-fieldset">
-                <legend>Window</legend>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-                Curabitur id vestibulum libero, id fermentum lorem.<br>
-                Aenean aliquam erat leo, eu tempus ex ornare eu.<br>
-                Sed ut lacus libero. Etiam rhoncus ipsum arcu.<br>
-                In quis bibendum libero. Donec nec egestas ipsum.<br>
-                Sed in venenatis diam. Nullam sollicitudin risus vel.<br>
-                <br>
-                <div class="tui-divider"></div>
-                <br>
-                <button class="tui-button white-255-text">more...</button>
-                <button class="tui-button purple-168 white-255-text">share</button>
-            </fieldset>
-        </div>
-
-        <!-- Scrool window -->
-        <div class="info-text">Scrool window</div>
-        <div class="tui-window white-168 black-255-text">
-            <fieldset class="tui-fieldset">
-                <legend class="white-255-text">Window</legend>
-                <div style="overflow: scroll; height: 200px; width: 400px; white-space: nowrap;">
-                    <span class="tui-shadow">The Lorem Ipsum </span><br><br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-                    Curabitur id vestibulum libero, id fermentum lorem.<br>
-                    Aenean aliquam erat leo, eu tempus ex ornare eu.<br>
-                    Sed ut lacus libero. Etiam rhoncus ipsum arcu.<br>
-                    In quis bibendum libero. Donec nec egestas ipsum.<br>
-                    Sed in venenatis diam. Nullam sollicitudin risus vel.<br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-                    Curabitur id vestibulum libero, id fermentum lorem.<br>
-                    Aenean aliquam erat leo, eu tempus ex ornare eu.<br>
-                    Sed ut lacus libero. Etiam rhoncus ipsum arcu.<br>
-                    In quis bibendum libero. Donec nec egestas ipsum.<br>
-                    Sed in venenatis diam. Nullam sollicitudin risus vel.<br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-                    Curabitur id vestibulum libero, id fermentum lorem.<br>
-                    Aenean aliquam erat leo, eu tempus ex ornare eu.<br>
-                    Sed ut lacus libero. Etiam rhoncus ipsum arcu.<br>
-                    In quis bibendum libero. Donec nec egestas ipsum.<br>
-                    Sed in venenatis diam. Nullam sollicitudin risus vel.<br>
-                </div>
-            </fieldset>
-        </div>
-
-        <!-- Fieldset features -->
-        <div class="info-text">Fieldset features</div>
-        <div class="tui-window orange-168 black-255-text">
-            <fieldset class="tui-fieldset tui-border-solid white-border">
-                <legend class="center white-255-text">Window</legend>
-                <button class="tui-fieldset-button left"><span class="green-255-text">↑</span></button>
-                <button class="tui-fieldset-button"><span class="green-255-text">■</span></button>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-                Curabitur id vestibulum libero, id fermentum lorem.<br>
-                Aenean aliquam erat leo, eu tempus ex ornare eu.<br>
-                Sed ut lacus libero. Etiam rhoncus ipsum arcu.<br>
-                In quis bibendum libero. Donec nec egestas ipsum.<br>
-                Sed in venenatis diam. Nullam sollicitudin risus vel.<br>
-                <br>
-                <div class="tui-divider"></div>
-                <br>
-                <a class="tui-button white-168">Copy</a>
-                <a class="tui-button white-168">Paste</a>
-                <br><br>
-                <div class="tui-fieldset-text">Text format: UTF-8</div>
-                <div class="tui-fieldset-text right">Ln: 2, Col: 5</div>
-            </fieldset>
-        </div>
-
-        <!-- Item select -->
-        <div class="info-text">Item select</div>
-        <div class="tui-window purple-168">
-            <fieldset class="tui-fieldset no-legend tui-border-solid" style="width: 300px">
+            <nav class="tui-nav absolute">
+                <span class="tui-datetime" data-format="h:m:s a"></span>
                 <ul>
-                    <li class="cyan-255-hover black-255-text-hover">
-                        <a href="#!">
-                            <span class="tui-shortcut">A</span>
-                            <span>Register Tables</span>
+                    <li class="tui-sidenav-button red-168-text">≡</li>
+                    <span class="tui-statusbar-divider"></span>
+
+                    <li class="tui-dropdown">
+                        <a href="https://startrails.space/testing"></a>
+                        <span class="red-168-text">H</span>ome
+                    </li>
+
+                    <li class="tui-dropdown">
+                        <span class="red-168-text">P</span>rojects
+                        <div class="tui-dropdown-content">
+                            <ul>
+                                <li>
+                                    <a href="#!">
+                                        <span class="red-168-text">E</span>xample
+                                    </a>
+                                </li>
+                                <div class="tui-black-divider"></div>
+
+                                <!-- SUBMENU EXAMPLE -->
+
+                                <li class="tui-dropdown block">
+                                    <span class="right">►</span>
+                                    <span class="red-168-text">S</span>tarmap
+                                    <div class="tui-dropdown-content">
+                                        <ul>
+                                            <li>
+                                                <a href="/STARMAP/MAP">
+                                                    <span class="red-168-text">M</span>ap
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#!">
+                                                    <span class="red-168-text">W</span>iki
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#!">
+                                                    <span class="red-168-text">M</span>ore...
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+
+                                <div class="tui-black-divider"></div>
+                                <li>
+                                    <a href="#!">
+                                        <span class="red-168-text">Q</span>uit
+                                        <span class="tui-shortcut">F10</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="tui-dropdown">
+                        <a href="#!"></a>
+                            <span class="red-168-text">A</span>bout
                         </a>
                     </li>
-                    <li class="cyan-255-hover black-255-text-hover">
-                        <a href="#!">
-                            <span class="tui-shortcut">B</span>
-                            <span>Register Consumers</span>
-                        </a>
-                    </li>
-                    <li class="cyan-255-hover black-255-text-hover">
-                        <a href="#!">
-                            <span class="tui-shortcut">C</span>
-                            <span>Register Companies</span>
+                    <li class="tui-dropdown">
+                        <a href="https://startrails.space/CREDITS">
+                            <span class="red-168-text">C</span>redits
                         </a>
                     </li>
                 </ul>
-            </fieldset>
-        </div>
+            </nav>
+    </div>
 
-        <!-- Window textarea -->
-        <div class="info-text">Window textarea</div>
+
+    <div class="center" style="margin-top: 100px; margin-bottom: 100px">
         <div class="tui-window">
             <fieldset class="tui-fieldset">
-                <legend class="center">MYAPP.CPP</legend>
-                <button class="tui-fieldset-button"><span class="green-255-text">↑</span></button>
-                <button class="tui-fieldset-button tui-fieldset-button-left"><span class="green-255-text">■</span></button>
-                <textarea class="tui-textarea" style="width: 400px; height: 200px;">#include &#60;iostream&#62;
-using namespace std;
-
-int main()
-{
-    cout &#60;&#60; "Hello, World!";
-    return 0;
-}</textarea>
+                <legend>Credits.txt</legend>
+                <b>Website</b><br>
+                Made by me
+                <br>
+                <b>Visuals</b><br>
+                Made by <a href="https://github.com/vinibiavatti1">Vinibiavatti1's</a> <a href="https://github.com/vinibiavatti1/TuiCss">TuiCss</a> Library"<br>
+                <div class="tui-divider"></div>
+                <br>
+                <button class="tui-button white-255-text">Okay!</button>
+                <button class="tui-button purple-168 white-255-text">piss of</button>
             </fieldset>
-        </div>
-
-        <!-- Simple panel -->
-        <div class="info-text">Simple panel</div>
-        <div class="tui-panel cyan-168 black-255-text">
-            <div class="tui-panel-content">
-                <b>NOTE:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Vestibulum a posuere sapien, nec
-                placerat
-                lorem.<br> Aliquam urna lorem, placerat et varius et, aliquam ac libero.
-            </div>
-        </div>
-
-        <!-- Panel title -->
-        <div class="info-text">Panel title</div>
-        <div class="tui-panel white-168 black-255-text">
-            <div class="tui-panel-header">
-                About
-            </div>
-            <div class="tui-panel-content">
-                TuiCss v2.0.0 Made with ♥
-                <br><br>
-                <div class="center">
-                    <button class="tui-button white-255" style="width: 80px">OK</button>
-                </div>
-            </div>
         </div>
     </div>
 </body>
