--- a/CREDITS.html
+++ b/CREDITS.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="tui-bg-purple-black">
+<html lang="en" class="tui-bg-GREEN-black">
 
 <head>
     <meta charset="UTF-8">
@@ -91,23 +91,23 @@
                     </li>
                 </ul>
             </nav>
-    </div>
 
 
-    <div class="center" style="margin-top: 100px; margin-bottom: 100px">
-        <div class="tui-window">
-            <fieldset class="tui-fieldset">
-                <legend>Credits.txt</legend>
-                <b>Website</b><br>
-                Made by me
-                <br>
-                <b>Visuals</b><br>
-                Made by <a href="https://github.com/vinibiavatti1">Vinibiavatti1's</a> <a href="https://github.com/vinibiavatti1/TuiCss">TuiCss</a> Library"<br>
-                <div class="tui-divider"></div>
-                <br>
-                <button class="tui-button white-255-text">Okay!</button>
-                <button class="tui-button purple-168 white-255-text">piss of</button>
-            </fieldset>
+        <div class="center" style="margin-top: 100px; margin-bottom: 100px">
+            <div class="tui-window">
+                <fieldset class="tui-fieldset">
+                    <legend>Credits.txt</legend>
+                    <b>Website</b><br>
+                    Made by me
+                    <br>
+                    <b>Visuals</b><br>
+                    Made by <a href="https://github.com/vinibiavatti1">Vinibiavatti1's</a> <a href="https://github.com/vinibiavatti1/TuiCss">TuiCss</a> Library"<br>
+                    <div class="tui-divider"></div>
+                    <br>
+                    <button class="tui-button white-255-text">Okay!</button>
+                    <button class="tui-button purple-168 white-255-text">piss of</button>
+                </fieldset>
+            </div>
         </div>
     </div>
 </body>
