--- a/CREDITS.html
+++ b/CREDITS.html
@@ -18,7 +18,7 @@
         }
     </style>
 </head>
-    <div class="tui-screen-800-600 bordered centered tui-bg-blue-black">
+    <div class="tui-screen-800-600 bordered centered tui-bg-orange-white">
         <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
