fixed link i think

--- a/testing.html
+++ b/testing.html
@@ -72,7 +72,7 @@
                 <span class="tui-statusbar-divider"></span>
 
                 <li class="tui-dropdown">
-                    <a href="/index.html"></a>
+                    <a href="https://startrails.space/testing"></a>
                     <span class="red-168-text">H</span>ome
                 </li>
 
@@ -129,7 +129,7 @@
                     </a>
                 </li>
                 <li class="tui-dropdown">
-                    <a href="#!">
+                    <a href="https://startrails.space/CREDITS">
                         <span class="red-168-text">C</span>redits
                     </a>
                 </li>
