--- a/CREDITS.html
+++ b/CREDITS.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Window and Panels Example</title>
+    <title>Credits</title>
     <script src="../dist/tuicss.min.js"></script>
     <link rel="stylesheet" href="../dist/tuicss.min.css">
     <style>
