--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -12,12 +12,13 @@
         }
     </style>
 </head>
-
-    <div class="tui-panel cyan-168 black-255-text centered">
-        <div class="tui-panel-content">
-            <b>NOTE:</b> This page is still under construction.<br> 
-            The starmap is currently un available<br> 
-            Please come back after we've collected more data.
+    <div class="centered">
+        <div class="tui-panel cyan-168 black-255-text centered">
+            <div class="tui-panel-content">
+                <b>NOTE:</b> This page is still under construction.<br> 
+                The starmap is currently un available<br> 
+                Please come back after we've collected more data.
+            </div>
         </div>
     </div>
 
@@ -88,7 +89,7 @@
                         </a>
                     </li>
                     <li class="tui-dropdown">
-                        <a href="#!">
+                        <a href="https://startrails.space/CREDITS">
                             <span class="red-168-text">C</span>redits
                         </a>
                     </li>
