--- a/CREDITS.html
+++ b/CREDITS.html
@@ -100,8 +100,11 @@
                     <b>Website</b><br>
                     Made by me
                     <br>
+                    <br>
                     <b>Visuals</b><br>
-                    Made by <a href="https://github.com/vinibiavatti1">Vinibiavatti1's</a> <a href="https://github.com/vinibiavatti1/TuiCss">TuiCss</a> Library"<br>
+                    Made by <a href="https://github.com/vinibiavatti1"><span class="cyan-255-text">Vinibiavatti1's</span></a> <a href="https://github.com/vinibiavatti1/TuiCss"><span class="cyan-255-text">TuiCss library</span></a>
+                    <br>
+                    <br>
                     <div class="tui-divider"></div>
                     <br>
                     <button class="tui-button white-255-text">Okay!</button>
@@ -111,5 +114,4 @@
         </div>
     </div>
 </body>
-
 </html>
