--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -85,7 +85,7 @@
                         </div>
                     </li>
                     <li class="tui-dropdown">
-                        <a href="#!"></a>
+                        <a href="https://startrails.space/about"></a>
                             <span class="red-168-text">A</span>bout
                         </a>
                     </li>
