--- a/CREDITS.html
+++ b/CREDITS.html
@@ -28,8 +28,9 @@
                     <span class="tui-statusbar-divider"></span>
 
                     <li class="tui-dropdown">
-                        <a href="https://startrails.space/testing"></a>
-                        <span class="red-168-text">H</span>ome
+                        <a href="https://startrails.space/testing">
+                            <span class="red-168-text">H</span>ome
+                        </a>
                     </li>
 
                     <li class="tui-dropdown">
