--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
                         </div>
                     </li>
                     <li class="tui-dropdown">
-                        <a href="https://startrails.space/about"></a>
+                        <a href="https://startrails.space/about">
                             <span class="red-168-text">A</span>bout
                         </a>
                     </li>
@@ -97,15 +97,19 @@
         <div class="center" style="margin-top: 100px; margin-bottom: 100px">
             <div class="tui-window">
                 <fieldset class="tui-fieldset">
-                    <legend>Credits.txt</legend>
+                    <legend>about.txt</legend>
                     <b>The fuck is this?</b><br>
                     My personal website
                     <br>
                     <br>
+                    <b>Socials</b><br>
+                    <button class="tui-button cyan-255-text" href="https://x.com/FoxoUnderscore">Twitter</button>
+                    <br>
+                    <button class="tui-button cyan-255-text" href="https://bsky.app/profile/startrails.space">Bluesky</button>
+                    <br>
+                    <br>
                     <div class="tui-divider"></div>
                     <br>
-                    <button class="tui-button white-255-text">Okay!</button>
-                    <button class="tui-button purple-168 white-255-text">piss of</button>
                 </fieldset>
             </div>
         </div>
