--- a/testing.html
+++ b/testing.html
@@ -125,7 +125,7 @@
                     </div>
                 </li>
                 <li class="tui-dropdown">
-                    <a href="https://startrails.space/about"></a>
+                    <a href="https://startrails.space/about">
                         <span class="red-168-text">A</span>bout
                     </a>
                 </li>
