--- a/about.html
+++ b/about.html
@@ -103,9 +103,10 @@
                     <br>
                     <br>
                     <b>Socials</b><br>
-                    <button class="tui-button cyan-255-text" href="https://x.com/FoxoUnderscore">Twitter</button>
+                    <button class="tui-button cyan-255-text" onclick="window.location.href='https://x.com/FoxoUnderscore';">Twitter</button>
                     <br>
-                    <button class="tui-button cyan-255-text" href="https://bsky.app/profile/startrails.space">Bluesky</button>
+                    <br>
+                    <button class="tui-button cyan-255-text" onclick="window.location.href='https://bsky.app/profile/startrails.space';">Bluesky</button>
                     <br>
                     <br>
                     <div class="tui-divider"></div>
