--- a/CREDITS.html
+++ b/CREDITS.html
@@ -28,7 +28,7 @@
                     <span class="tui-statusbar-divider"></span>
 
                     <li class="tui-dropdown">
-                        <a href="https://startrails.space/testing">
+                        <a href="https://startrails.space/index">
                             <span class="red-168-text">H</span>ome
                         </a>
                     </li>
