--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                     <span class="tui-statusbar-divider"></span>
 
                     <li class="tui-dropdown">
-                        <a href="https://startrails.space/testing">
+                        <a href="https://startrails.space/index">
                             <span class="red-168-text">H</span>ome
                         </a>
                     </li>
@@ -101,6 +101,8 @@
                     <b>The fuck is this?</b><br>
                     My personal website
                     <br>
+                    <br>
+                    <div class="tui-divider"></div>
                     <br>
                     <b>Socials</b><br>
                     <button class="tui-button cyan-255-text" onclick="window.location.href='https://x.com/FoxoUnderscore';">Twitter</button>
