--- a/testing.html
+++ b/testing.html
@@ -137,13 +137,47 @@
             </ul>
         </nav>
 
-        <!-- Edit panel -->
-        <div class="tui-window full-width tui-no-shadow" style="margin-top: 20px;">
+        <div class="tui-window">
             <fieldset class="tui-fieldset">
-                <legend class="center">INDEX.HTML</legend>
-                <span class="tui-fieldset-button"><span class="green-255-text">↕</span></span>
-                <textarea class="tui-textarea full-width" style="height: 493px; overflow: scroll;">Testing</textarea>
+                <legend>Window</legend>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+                Curabitur id vestibulum libero, id fermentum lorem.<br>
+                Aenean aliquam erat leo, eu tempus ex ornare eu.<br>
+                Sed ut lacus libero. Etiam rhoncus ipsum arcu.<br>
+                In quis bibendum libero. Donec nec egestas ipsum.<br>
+                Sed in venenatis diam. Nullam sollicitudin risus vel.<br>
+                <br>
+                <div class="tui-divider"></div>
+                <br>
+                <button class="tui-button white-255-text">more...</button>
+                <button class="tui-button purple-168 white-255-text">share</button>
             </fieldset>
+        </div>
+
+        <div class="center" style="margin-top: 100px; margin-bottom: 100px;">
+            <div class="tui-panel white-168" style="width: 400px;">
+                <div class="tui-tabs red-168">
+                    <ul>
+                        <li><a class="tui-tab active" data-tab-content="tab-1-content">Tab 1</a></li>
+                        <li><a class="tui-tab" data-tab-content="tab-2-content">Tab 2</a></li>
+                        <li><a class="tui-tab disabled" data-tab-content="tab-3-content">Disabled</a></li>
+                    </ul>
+                </div>
+                <div class="content black-255-text">
+                    <div class="tui-tab-content" id="tab-1-content">
+                        <h3>Content 1</h3>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt ullam nemo ad id. Temporibus, impedit reiciendis quidem ea quasi fugiat! Illum unde eaque porro sint voluptates corporis reiciendis tempora?
+                    </div>
+                    <div class="tui-tab-content" id="tab-2-content">
+                        <h3>Content 2</h3>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt ullam nemo ad id.
+                    </div>
+                    <div class="tui-tab-content" id="tab-3-content">
+                        <h3>Content 3</h3>
+                        You could not see it!
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Status bar -->
