--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="tui-screen-800-600 bordered centered tui-bg-blue-black">
+    <div class="tui-screen-800-600 bordered centered tui-bg-blue-black" style="background-color: rgb(0, 0, 160);">
 
         <!-- Sidenav -->
         <nav class="tui-sidenav absolute">
@@ -72,7 +72,7 @@
                 <span class="tui-statusbar-divider"></span>
 
                 <li class="tui-dropdown">
-                    <a href="https://startrails.space/testing">
+                    <a href="https://startrails.space/index">
                         <span class="red-168-text">H</span>ome
                     </a>
                 </li>
